; ModuleID = '/home/carl/AnghaBench/How-to-Make-a-Computer-Operating-System/src/sdk/src/libc/src/stdlib/extr_malloc.c_free.c'
source_filename = "/home/carl/AnghaBench/How-to-Make-a-Computer-Operating-System/src/sdk/src/libc/src/stdlib/extr_malloc.c_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.malloc_header = type { i32, i64 }

@e_heap = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.malloc_header*, align 8
  %4 = alloca %struct.malloc_header*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = getelementptr i8, i8* %5, i64 -16
  %7 = bitcast i8* %6 to %struct.malloc_header*
  store %struct.malloc_header* %7, %struct.malloc_header** %3, align 8
  br label %8

8:                                                ; preds = %30, %1
  %9 = load %struct.malloc_header*, %struct.malloc_header** %3, align 8
  %10 = bitcast %struct.malloc_header* %9 to i8*
  %11 = load %struct.malloc_header*, %struct.malloc_header** %3, align 8
  %12 = getelementptr inbounds %struct.malloc_header, %struct.malloc_header* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i8, i8* %10, i64 %14
  %16 = bitcast i8* %15 to %struct.malloc_header*
  store %struct.malloc_header* %16, %struct.malloc_header** %4, align 8
  %17 = icmp ne %struct.malloc_header* %16, null
  br i1 %17, label %18, label %28

18:                                               ; preds = %8
  %19 = load %struct.malloc_header*, %struct.malloc_header** %4, align 8
  %20 = load i64, i64* @e_heap, align 8
  %21 = inttoptr i64 %20 to %struct.malloc_header*
  %22 = icmp ult %struct.malloc_header* %19, %21
  br i1 %22, label %23, label %28

23:                                               ; preds = %18
  %24 = load %struct.malloc_header*, %struct.malloc_header** %4, align 8
  %25 = getelementptr inbounds %struct.malloc_header, %struct.malloc_header* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = icmp eq i64 %26, 0
  br label %28

28:                                               ; preds = %23, %18, %8
  %29 = phi i1 [ false, %18 ], [ false, %8 ], [ %27, %23 ]
  br i1 %29, label %30, label %38

30:                                               ; preds = %28
  %31 = load %struct.malloc_header*, %struct.malloc_header** %4, align 8
  %32 = getelementptr inbounds %struct.malloc_header, %struct.malloc_header* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = load %struct.malloc_header*, %struct.malloc_header** %3, align 8
  %35 = getelementptr inbounds %struct.malloc_header, %struct.malloc_header* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = add nsw i32 %36, %33
  store i32 %37, i32* %35, align 8
  br label %8

38:                                               ; preds = %28
  %39 = load %struct.malloc_header*, %struct.malloc_header** %3, align 8
  %40 = getelementptr inbounds %struct.malloc_header, %struct.malloc_header* %39, i32 0, i32 1
  store i64 0, i64* %40, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
